[gd_scene load_steps=2 format=3 uid="uid://dkinm0nh03o8"]

[ext_resource type="Script" path="res://addons/godot-component-generator/main_panel.gd" id="1_ydkg8"]

[node name="MainPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ydkg8")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 13
theme_override_constants/v_separation = 13
columns = 4

[node name="GridContainer" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 13
theme_override_constants/v_separation = 13
columns = 4

[node name="LblMessage" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1. Set the component directory somewhere on your machine.
2. Generate a component from this or other projects into that directory.
3. Then import them as you wish across all projects. Just add this plugin :)
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BtnLoad" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Set components directory"

[node name="BtnImport" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Import component"

[node name="BtnGenerate" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Generate a new component"

[connection signal="gui_input" from="GridContainer/ComponentVew" to="GridContainer/ComponentVew" method="_on_gui_input"]
[connection signal="mouse_entered" from="GridContainer/ComponentVew" to="GridContainer/ComponentVew" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/ComponentVew" to="GridContainer/ComponentVew" method="_on_mouse_exited"]
[connection signal="gui_input" from="GridContainer/@PanelContainer@17486" to="GridContainer/@PanelContainer@17486" method="_on_gui_input"]
[connection signal="mouse_entered" from="GridContainer/@PanelContainer@17486" to="GridContainer/@PanelContainer@17486" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/@PanelContainer@17486" to="GridContainer/@PanelContainer@17486" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer2/BtnLoad" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="VBoxContainer2/BtnImport" to="." method="_on_btn_import_pressed"]
[connection signal="pressed" from="VBoxContainer2/BtnGenerate" to="." method="_on_btn_generate_pressed"]
